Before I manipulated allUrg code

--- a/escritos/urge.tex
+++ b/escritos/urge.tex
@@ -30,7 +30,7 @@
 
 \begin{document}
 
-\title{Congress skips its turn, again: \\ Agenda obstruction in Chile's Congress\thanks{Paper presented at the Comparative Politics Workshop of the University of Illinois at Urbana-Champaign, Feb.~9, 2015. I am grateful to the Department of Political Science at Washington University in St.\ Louis, where I did much of this work as visiting scholar. I also acknowledge financial support from the Asociaci\'on Mexicana de Cultura A.C.\ and CONACYT's Sistema Nacional de Investigadores. The author bears sole responsibility for mistakes and shortcomings in the paper.}}
+\title{Congress skips its turn, again: \\ Agenda obstruction in Chile's Congress\thanks{The author is grateful to José Antonio Cheibub, Gisela Sin, and participants at the Comparative Politics Workshop of the University of Illinois at Urbana-Champaign for useful comments and critiques; to the Department of Political Science at Washington University in St.\ Louis, where much of this work was done as visiting scholar; and acknowledges financial support from the Asociaci\'on Mexicana de Cultura A.C.\ and CONACYT's Sistema Nacional de Investigadores. The author bears sole responsibility for mistakes and shortcomings in the paper.}}
 \author{Eric Magar \\ ITAM }
 \date{\today}
 \maketitle
