--- a/escritos/urge.tex
+++ b/escritos/urge.tex
@@ -43,7 +43,7 @@
 
 \onehalfspacing
 
-The book has sought to show that the generic, often tacit, and quite ubiquitous model of politics presidential systems is too simple. That model portrays a president and Congress with shared policy-making power as engaged in an ultimatum game. That one side proposes something that the other accepts or rejects is, indeed, a fundamental trait of the system. But, leaving other important elements aside, the model has lead to a dichomotomous view of gridlock/not that has been inimical to an understanding of decision-making in separation of power systems in comparative politics.
+The book has sought to show that the generic, often tacit, and quite ubiquitous model of politics in presidential systems is too simple. That model portrays a president and Congress with shared policy-making power as engaged in an ultimatum game. That one side proposes something that the other accepts or rejects is, indeed, a fundamental trait of the system. But, leaving other important elements aside, the model has lead to a dichomotomous view of gridlock/not that has been inimical to an understanding of decision-making in separation of power systems in comparative politics.
 
 Previous chapters highlight elements that interact in decision-making with the branches' mutual veto. Adding ``minor'' institutional detail (Can vetoes be overridden? Can anyone move unilaterally?), motivation (Are politicians policy-oriented only? Does it matter?), or strategic considerations (Why move if you anticipate a rejection?) greatly sharpens the model's explanatory power. 
 
@@ -280,13 +280,13 @@ introduced               &        5,533  &       1,469  &     7,002  \\
 as \%                    &    \emph{79}  &   \emph{21}  & \emph{100} \\ \hdashline
 passed                   &          404  &       1,067  &     1,471  \\
 as \%                    &    \emph{27}  &   \emph{73}  & \emph{100} \\
-as \% introduced         &     \emph{7}  &   \emph{73}  &  \emph{21} \\ \hdashline
+as \% of introduced      &     \emph{7}  &   \emph{73}  &  \emph{21} \\ \hdashline
 declared urgent          &          351  &       1,016  &     1,367  \\
 as \%                    &    \emph{26}  &   \emph{74}  & \emph{100} \\
-as \% introduced         &     \emph{6}  &   \emph{69}  &  \emph{20} \\ \hdashline
+as \% of introduced      &     \emph{6}  &   \emph{69}  &  \emph{20} \\ \hdashline
 declared urgent \& passed&          167  &         762  &       929  \\
 as \%                    &    \emph{18}  &   \emph{82}  & \emph{100} \\
-as \% declared urgent    &    \emph{48}  &   \emph{75}  &  \emph{68} \\ \hline
+as \% of declared urgent &    \emph{48}  &   \emph{75}  &  \emph{68} \\ \hline
 \end{tabular}
 \caption{Bills, laws, and those declared urgent 1998--2014}\label{T:billDescriptives}
 \end{table}
@@ -341,10 +341,40 @@ More interesting patterns in urgency authority usage are discernible in bill his
 \end{table}
 
 
+**********************
+
+% Many retiros actually occurred after deadline... meaning?
+
+% \begin{tabular}{lrrrrrrrrr}
+%                        &  1 AN  & 2 2wk & 3 4wk & ext.1 & ext.2 & ext.3 & ret.1 & ret.2 & ret.3 \\
+% Retired after deadline &  102 & 308 & 217 &  93 & 560 & 203 &   0 &   0 &   0 \\
+% Not                    &  525 &2039 &2255 & 289 &2790 &2174 & 266 &1443 &1406 \\
+% \end{tabular}
+
+% *********************
+
+Vote occurred within deadline
+
+\begin{tabular}{lrr}
+                           & \% vote w/i deadline  & N \\
+Act now                    &    48                 & 25 \\
+Act now--extended          &    50                 & 4  \\
+Act now--extended--retired &    29                 & 7  \\
+Act now--retired           &    100                & 4  \\
+2wk                        &    8                  & 370\\
+2wk--extended              &    21                 & 39 \\
+2wk--extended--retired     &    22                 & 109\\
+2wk--retired               &    89                 & 27 \\
+4wk                        &    4                  & 272\\
+4wk--extended              &    22                 & 36 \\
+4wk--extended--retired     &    16                 & 138\\
+4wk--retired               &    29                 & 17 \\
+\end{tabular} 
+
+*********************
+
+
 Reiterating a message could be due to non-compliance: in light of congressional inaction on an urgent bill, the executive sends the message again, perhaps over and over again. The contents of many messages can be downloaded as separate files from the web, but this remains a route for future work. Yet an inspection of the types of messages observed in the period suggests otherwise. 
-
-
-
 
 
 \begin{table}
