Revision towards APSA 2015

--- a/escrito/urge02.tex
+++ b/escrito/urge02.tex
@@ -49,7 +49,7 @@ Previous chapters highlight elements that interact in decision-making with the b
 
 %In a world of expanded government responsibilities, ``the need for coordinated and coherent programs, legislative as well as administrative, has become paramount'' \citep[][:4]{apsa.1950}. 
 
-This chapter continues the exploration of unilateralism in presidential systems with an inspection of the urgency authority. Five Latin American constitutions give the executive power to interfere, to some degree, with the legislative agenda. The urgency authority varies considerably \citep[][:437]{morgenstern.2002b}. In Brazil, the assembly must act on a bill deemed urgent withing 45 days, or else it takes precedence over other legislative business. In Colombia, an urgent bill takes precedence immediately. In Uruguay and Chile, legislators must act withing a pre-specified, short period; failure to do so converts the urgent bill into law in Uruguay. In Chile the consequences of inaction remain unclear. And in Mexico since 2012, the president can declare urgent up to four bills every year, which must be scheduled for a floor vote within 30 days. 
+This chapter continues the exploration of unilateralism in presidential systems with an inspection of the urgency authority. Five Latin American constitutions give the executive power to interfere, to some degree, with the legislative agenda. The urgency authority varies considerably \citep[][:437]{morgenstern.2002b}. In Brazil, the assembly must act on a bill deemed urgent withing 45 days, or else it takes precedence over other legislative business. In addition, since 2001 all executive unilateral policy (\emph{medidas provis\'orias}) acquire urgent status upon publication. In Colombia, an urgent bill goes to the top of the voting schedule immediately. In Uruguay and Chile, legislators must act withing a pre-specified, short period; failure to do so converts the urgent bill into law in Uruguay. In Chile the consequences of inaction are indetermined. And in Mexico since 2012, the president can declare urgent up to four bills every year, which must be scheduled for a floor vote within 30 days. 
 
 Interfering with the legislative agenda does not end gridlock per se, and the urgency authority confronts a paradox. Can it convey influence in the legislative arena? Given an urgency, a recalcitrant assembly will simply stop the president's proposal sooner then it would have done. But, this chapter aims to show, it also does this negative action differently, and such difference may put pressure on the legislature. This opens up new facets in executive-legislative negotiation. 
 
